--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejemplo</title>
-    <link rel="stylesheet" href="/css/estilos1.css">
+    <link rel="stylesheet" href="css/estilos1.css">
 </head>
 <body>
     <div id="caja1">
